Using getDeclaredConstructor().newInstance()
Since Java 9, newInstance() is deprecated